--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
+    <link href="./css/animate.css" rel="stylesheet" />
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -28,7 +29,13 @@
       <div class="container-fluid mb-4">
         <nav class="navbar navbar-expand-lg px-5">
           <a class="navbar-brand" href="index.html">
-            <img src="./img/logo-pink.svg" class="img-fluid mr-2" alt="logo" />
+            <img
+              src="./img/logo-pink.svg"
+              class="img-fluid mr-2 wow bounce"
+              data-wow-duration="3s"
+              data-wow-iteration="200"
+              alt="logo"
+            />
           </a>
           <button
             class="navbar-toggler"
@@ -70,7 +77,7 @@
     <section class="hero hero_padding">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-5 margin_top_mobile">
+          <div class="col-lg-5 margin_top_mobile wow slideInLeft">
             <h1 class="text-capitalize mt-4 mb-4">
               the best platform for transport and delivery solution.
             </h1>
@@ -96,7 +103,7 @@
           <img
             src="./img/landing-top-design.png"
             alt="image"
-            class="img-fluid col-md-7 rounded_bg_curve pr-0"
+            class="img-fluid col-md-7 rounded_bg_curve pr-0 wow slideInRight"
           />
         </div>
       </div>
@@ -107,11 +114,17 @@
     <section class="about about_padding">
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 d-flex justify-content-center">
+          <div
+            class="col-lg-7 d-flex justify-content-center wow fadeInUp"
+            data-wow-duration="1s"
+          >
             <img src="../img/hand-delivery.png" alt="image" class="img-fluid" />
           </div>
 
-          <div class="col-lg-5 text-white px-4 mobile_margin">
+          <div
+            class="col-lg-5 text-white px-4 mobile_margin wow fadeInUp data-wow-duration="
+            1s
+          >
             <h2 class="text-capitalize mt-4 mb-4 pt-5">about us</h2>
             <p class="details mb-4 text">
               Logistix is a representative logistic operator, providing full
@@ -133,11 +146,9 @@
     <section class="services services_padding">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-4 mobile_text_center">
-            <h2 class="text-capitalize mt-5 mb-4">
-              services we offer
-            </h2>
-            <p class="mb-5">
+          <div class="col-lg-4 mobile_text_center wow fadeInUp">
+            <h2 class="text-capitalize mt-5 mb-4">services we offer</h2>
+            <p class="mb-5 wow pulse">
               We are expert in managing, leading logistics services for
               individual, coperate and industrial company. Our logistic
               structure operates on modern technology to help you implement,
@@ -148,7 +159,7 @@
             >
           </div>
 
-          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto">
+          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto wow fadeInLeft">
             <img src="./img/Group 11.png" class="img-fluid" alt="truck" />
             <h5 class="mt-4">Household Delivery</h5>
             <p>
@@ -158,7 +169,7 @@
             <a href="#" class="btn btn-link text-left mr-5">Read More</a>
           </div>
 
-          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto">
+          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto wow fadeInLeft">
             <img src="./img/Group 12.png" class="img-fluid mt-2" alt="truck" />
             <h5 class="mt-4">Dispatch Ride</h5>
             <p>
@@ -170,16 +181,14 @@
 
         <div class="row">
           <div class="col-lg-5 mt-4 px-4 pt-4"></div>
-          <div class="col-lg-3 mt-4 px-4 pt-4 shadow">
+          <div class="col-lg-3 mt-4 px-4 pt-4 shadow wow fadeInLeft">
             <img src="./img/Group 14.png" class="img-fluid mt-2" alt="truck" />
             <h5 class="mt-4">Product Delivery</h5>
-            <p>
-              We provide door to door delivery of consumer good with ul
-            </p>
+            <p>We provide door to door delivery of consumer good with ul</p>
             <a href="#" class="btn btn-link text-left mr-5">Read More</a>
           </div>
 
-          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto">
+          <div class="col-lg-3 mt-4 px-4 pt-4 shadow ml-auto wow fadeInLeft">
             <img src="./img/Group 13.png" class="img-fluid mt-2" alt="truck" />
             <h5 class="mt-4">Ware Housing</h5>
             <p>
@@ -191,10 +200,10 @@
       </div>
     </section>
     <img
-      style="position: absolute; left: 0; top: 2000px; z-index: -100;"
+      style="position: absolute; left: 0; top: 2000px; z-index: -100"
       src="./img/Ellipse 27.png"
       alt="img"
-      class="img-fluid ellipse27"
+      class="img-fluid ellipse27 wow fadeInleft"
     />
     <!-- Services We Offer start -->
 
@@ -202,10 +211,8 @@
     <section class="delivery service_delivery_padding">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12 col-lg-5 card">
-            <h5 class="card-header text-center p-4">
-              request a quote
-            </h5>
+          <div class="col-sm-12 col-lg-5 card wow slideInLeft">
+            <h5 class="card-header text-center p-4">request a quote</h5>
             <div class="card-body">
               <form>
                 <div class="form-row">
@@ -273,7 +280,10 @@
             </div>
           </div>
 
-          <div class="col-lg-7 pl-lg-5 margin_mobile">
+          <div
+            class="col-lg-7 pl-lg-5 margin_mobile wow slideInRight"
+            data-wow-duration="2s"
+          >
             <h2 class="text-capitalize mt-4 mb-4">
               committed to improving on our service delivery
             </h2>
@@ -325,7 +335,7 @@
     <section class="companies companies_padding">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-5 mobile_margin">
+          <div class="col-lg-5 mobile_margin wow slideInLeft">
             <h2 class="text-capitalize mt-4 mb-4">
               over 100 companies are registered with us.
             </h2>
@@ -336,7 +346,10 @@
             </p>
           </div>
 
-          <div class="col-lg-7 pl-lg-5 companies_logo">
+          <div
+            class="col-lg-7 pl-lg-5 companies_logo wow slideInRight"
+            data-wow-duration="2s"
+          >
             <img
               src="./img/grind.png"
               alt="grind"
@@ -392,7 +405,10 @@
     <section class="testimonials testimonials_padding mb-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 mx-auto text-center mb-md-0 mt-5 mt-md-0">
+          <div
+            class="col-md-6 mx-auto text-center mb-md-0 mt-5 mt-md-0 wow fadeInUp"
+            data-wow-duration="2s"
+          >
             <div class="p-5">
               <img
                 src="./img/photo1.png"
@@ -411,7 +427,10 @@
             </div>
           </div>
 
-          <div class="col-md-6 mx-auto text-center">
+          <div
+            class="col-md-6 mx-auto text-center wow fadeInUp"
+            data-wow-duration="2s"
+          >
             <div class="p-5">
               <img
                 src="./img/photo2.png"
@@ -442,7 +461,7 @@
     <section class="packages send_packages_padding pt-5">
       <div class="container-fluid">
         <div class="row d-flex align-items-center">
-          <div class="col-md-6 col-sm-12 text-white">
+          <div class="col-md-6 col-sm-12 text-white wow slideInLeft">
             <div>
               <h2 class="text-capitalize mb-4">
                 you can send your package now!
@@ -473,7 +492,9 @@
             <img
               src="../img/delivery-man.png"
               alt="delivery"
-              class="img-fluid"
+              class="img-fluid wow bounce"
+              data-wow-duration="3s"
+              data-wow-iteration="200"
             />
           </div>
         </div>
@@ -560,6 +581,10 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/wow.js"></script>
+    <script>
+      new WOW().init();
+    </script>
     <!-- Script end -->
   </body>
 </html>
